--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,9 @@
 {
-	"image": "mcr.microsoft.com/devcontainers/universal:2",
+	//"image": "mcr.microsoft.com/devcontainers/universal:2",
+	"image": "mcr.microsoft.com/vscode/devcontainers/base:0.118-ubuntu-18.04",
 	"features": {},
-
 	"onCreateCommand": ".devcontainer/setup.sh",
 	"postCreateCommand": "",
-
 	"customizations": {
 		"vscode": {
 			"extensions": [
