--- a/environment.yml
+++ b/environment.yml
@@ -35,6 +35,7 @@ dependencies:
   - pytest-cov
   - pytest-xdist
   - hypothesis
+  - pytest-order
   # For type annotations
   - typing_extensions>=4.2.0  # needed for python < 3.10
   - mypy=1.4.1
@@ -54,3 +55,6 @@ dependencies:
   # Used in some tests
   - cffi
   - pytz
+  # Pip
+  - pip
+    - "git+https://github.com/ConorFWild/_gemmi.git"
