--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - python=3.9 #need to pin to avoid issues with builds
   - cython>=3.0
   - compilers
-  - openblas
+#  - openblas
 #  - nomkl
   - setuptools=59.2.0
   - ninja
