--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.pt filter=lfs diff=lfs merge=lfs -text
-*.gz filter=lfs diff=lfs merge=lfs -text
+# *.pt filter=lfs diff=lfs merge=lfs -text
+# *.gz filter=lfs diff=lfs merge=lfs -text
+
