--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "bokeh",
     "dask",
     "dask-jobqueue",
-    "torch==1.13.1 @ https://download.pytorch.org/whl/cpu"
+    "torch==1.13.1"
 ] # Add project dependencies here, e.g. ["click", "numpy"]
 dynamic = ["version"]
 license.file = "LICENSE"
@@ -37,3 +37,6 @@ requires-python = ">=3.9"
 [tool.pytest.ini_options]
 addopts = "-x"
 testpaths = ['tests']
+
+[tool.uv.pip]
+extra-index-url = ["https://download.pytorch.org/whl/cpu"]
