--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "bokeh",
     "dask",
     "dask-jobqueue",
-    "torch==1.13.1"
+    "torch==1.13.1",
+    "pytorch-lightning"
 ] # Add project dependencies here, e.g. ["click", "numpy"]
 dynamic = ["version"]
 license.file = "LICENSE"
