--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
 ]
 description = "Tools to generate data suitable for loading into Fragalysis"
 dependencies = [
-    "numpy",
+    "numpy<2.0",
     "scipy",
     "joblib",
     "scikit-learn",
